--- a/WDLesson2_2Practical/style.css
+++ b/WDLesson2_2Practical/style.css
@@ -1,20 +1,30 @@
 /* Basic Structure of a CSS rule using classes
-
-.class{
-  property: value;
-}
+   .class {
+       property: value;
+   }
 */
 
 /* Challenge 5: Change the family of all elements to Arial */
+* {
+  font-family: Arial, sans-serif;
+}
 
-/* Challenge 6: Change the background color to blue, the color of the text to white for all elements 
-with a class of "info" */
+/* Challenge 6: Change the background color to blue, the color of the text to white for all elements with a class of "info" */
+.info {
+  background-color: blue;
+  color: white;
+}
 
 /* Challenge 7: Add a border of 2px solid red for all elements with a class of "highlight" */
+.highlight {
+  border: 2px solid red;
+}
 
-/* Challenge 8: Align the text in the center and drop a shadow on the text of 2px 2px yellow  for 
-all elements with a class of "special"
-*/
+/* Challenge 8: Align the text in the center and drop a shadow on the text of 2px 2px yellow for all elements with a class of "special" */
+.special {
+  text-align: center;
+  text-shadow: 2px 2px yellow;
+}
 
-/* Challenge Bonus: Create a CSS rule for a class named "shadow".  
-Apply a shadow to the box around the elements that is 2px 2px  gray. */ 
+/* Challenge Bonus: Create a CSS rule for a class named "shadow". Apply a shadow to the box around the elements that is 2px 2px gray. */
+
