--- a/WDLesson2_5Practical/style.css
+++ b/WDLesson2_5Practical/style.css
@@ -1,23 +1,46 @@
 /* Challenge 8: Change the type of font to Arial for all elements */
+* {
+  font-family: Arial;
+}
 
-/* Challenge 9: Change the background color for all elements with a class of banner.  Choose a color
-                using rgb( )
-*/
+/* Challenge 9: Change the background color for all elements with a class of banner */
+#banner {
+  background-color: rgb(0, 123, 255);
+  color: white;
+  padding: 20px;
+  text-align: center;
+  margin-bottom:55px;
+}
 
-/* Challenge 10: Change the background color for all elements with a class of subbanner.  Choose a color
-                using a hexdecimal value. 
-*/
+/* Challenge 10: Change the background color for all elements with a class of subbanner */
+.subbanner {
+  background-color: #6a1b9a;
+  color: white;
+  padding: 15px;
+  text-align: center;
+}
 
-/* Challenge 11: Change the radius of the border to 6px and height to 200px for all images inside of all 
-                 elements with a class of gallery 
-*/
+/* Challenge 11: Change the radius of the border to 6px and height to 200px for all images inside of all elements with a class of gallery */
+.gallery img {
+  border-radius: 6px;
+  height: 200px;
+  object-fit: cover;
+  transition:1s;
+  margin: 5px;
+}
 
-/* Challenge 12: When the visitor moves their mouse over images inside of the element with an id of firstGallery,
-                 apply some type of styling using the filter( ) effect
-*/
+/* Challenge 12: When the visitor moves their mouse over images inside of the element with an id of firstGallery, apply some type of styling using the filter() effect */
+#firstGallery img:hover {
+  filter: brightness(1.2);
+}
 
-/* Challenge 13: When the visitor moves their mouse over images inside of the element with an id of secondGallery,
-                 apply some other type of styling.
-*/
+/* Challenge 13: When the visitor moves their mouse over images inside of the element with an id of secondGallery, apply some other type of styling */
+#secondGallery img:hover {
+  filter: grayscale(50%);
+}
 
 /* Challenge 14: Change the transition for all elements to 1 second */
+* {
+  transition:1s;
+}
+
